--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ var/
 .installed.cfg
 *.egg
 .idea/
-.remote-sync-json
+.remote-sync.json
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
