--- a/raspPiScripts/requirements.txt
+++ b/raspPiScripts/requirements.txt
@@ -1,28 +1,16 @@
+autopep8==1.2.4
+click==6.6
 Flask==0.11.1
+Flask-Login==0.4.0
 Flask-SQLAlchemy==2.1
+itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mock==2.0.0
+passlib==1.7.0
+pbr==1.10.0
+pep8==1.7.0
+six==1.10.0
 SQLAlchemy==1.1.4
 Werkzeug==0.11.11
-argparse==1.2.1
-chardet==2.3.0
-click==6.6
-colorama==0.3.2
-funcsigs==1.0.2
-gunicorn==19.0.0
-html5lib==0.999
-itsdangerous==0.24
-meld3==1.0.0
-mock==2.0.0
-ndg-httpsclient==0.3.2
-paho-mqtt==1.2
-pbr==1.10.0
-pyOpenSSL==0.13.1
-pyasn1==0.1.7
-requests==2.4.3
-six==1.10.0
-supervisor==3.0
-urllib3==1.9.1
-virtualenv==1.11.6
-wheel==0.24.0
-wsgiref==0.1.2
+WTForms==2.1
